--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ generate();</script>
             <!-- Botão 1 -->
             <div id="cta1" class="mt-4 d-none">
               <a href="https://pay.hotmart.com/T72206509C?checkoutMode=10" class="a-btn" style="text-decoration: none;">
-                <span class="span-btn">¡QUIERO ACCEDER!</span>
+                <span class="span-btn">¡QUIERO TERMINAR CON LA DIASTASIS!</span>
                 <span class="span-btn2">(atención: plazas limitadas)</span>
               </a>
             </div>
@@ -90,7 +90,7 @@ generate();</script>
     
 
     <script type="text/javascript">
-      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1753000); // temporização da Call to Action (em milissegundos)
+      setTimeout(() => {document.getElementById("cta1").classList.remove("d-none"); document.getElementById("cta2").classList.remove("d-none")}, 1636000); // temporização da Call to Action (em milissegundos)
     </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
