--- a/si/index.html
+++ b/si/index.html
@@ -114,16 +114,23 @@
           <p class="lead">Para agregar este <span class="font-italic">Sistema Cero Flacidez</span> a su pedido hoy, simplemente haga clic en el botón de abajo ahora mismo...</p>
           <div id="cta">
 
-            <!-- CÓDIGO DA KIWIFY -->
+            <!-- CÓDIGO  -->
 
-            <div style="text-align:center">
-          <button id="kiwify-upsell-trigger-8uT5joR" style="background-color:#27AF60;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #27AF60;font-size:20px;">Sim, eu aceito essa oferta especial!</button>
-          <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não, eu gostaria de recusar essa oferta</div>
-        </div><script> 
-            let nextUpsellURL = "";
-            let nextDownsellURL = "";</script><script src="https://kiwify-snippets.netlify.app/upsell/upsell.min.js"></script>
+ <!-- HOTMART - Upsell Widget -->
+<div id="box_hotmart"></div>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
-            <!-- CÓDIGO DA KIWIFY -->
+<script>
+opts = {
+key: 'USL-79712-223212-3d7cc857f047243bbb515db67184b70f',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->
+
+            <!-- CÓDIGO  -->
 
           </div>
           <p class="lead">Con este Sistema ya hemos ayudado a mujeres como Ana......</p>
