--- a/sii/index.html
+++ b/sii/index.html
@@ -68,16 +68,19 @@
           <p class="lead">Haga clic en el botón <span class="font-italic">"Agregar a mi pedido"...</span>...</p>
           <div id="cta">
 
-            <!-- CÓDIGO DA KIWIFY -->
+              <!-- HOTMART - Upsell Widget -->
+<div id="box_hotmart"></div>
+<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
 
-            <div style="text-align:center">
-          <button id="kiwify-upsell-trigger-8uT5joR" style="background-color:#27AF60;padding:12px 16px;cursor:pointer;color:#FFFFFF;font-weight:600;border-radius:4px;border:1px solid #27AF60;font-size:20px;">Sim, eu aceito essa oferta especial!</button>
-          <div id="kiwify-upsell-cancel-trigger" style="margin-top:1rem;cursor:pointer;font-size:16px;text-decoration:underline;font-family:sans-serif;">Não, eu gostaria de recusar essa oferta</div>
-        </div><script> 
-            let nextUpsellURL = "";
-            let nextDownsellURL = "";</script><script src="https://kiwify-snippets.netlify.app/upsell/upsell.min.js"></script>
-
-            <!-- CÓDIGO DA KIWIFY -->
+<script>
+opts = {
+key: 'USL-79712-223212-3d7cc857f047243bbb515db67184b70f',
+width: '650' ,
+height: '420'
+};
+Upsell.Widget.show(opts);
+</script>
+<!-- HOTMART - Upsell Widget [end] -->
 
           </div>
           <p class="lead">Y empieza ya mismo a acabar con la flacidez y la piel flácida.</p>
